@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amlabel.c,v 1.21 1998/12/20 07:10:33 oliva Exp $
+ * $Id: amlabel.c,v 1.22 1999/02/10 19:14:26 oliva Exp $
  *
  * write an Amanda label on a tape
  */
@@ -257,6 +257,23 @@ int main(argc, argv)
 	    putchar('\n');
 	    error(errstr);
 	} else {
+	    printf(", checking label", label); fflush(stdout);
+
+	    if((errstr = tape_rdlabel(tapename, &olddatestamp, &oldlabel)) != NULL) {
+		putchar('\n');
+		if (strcmp(errstr, "not an amanda tape") != 0)
+		    error(errstr);
+		error("no label found, are you sure %s is non-rewinding?",
+		      tapename);
+	    }
+
+	    if (strcmp("X", olddatestamp) != 0 ||
+		strcmp(label, oldlabel) != 0) {
+		putchar('\n');
+		error("read label %s back, timestamp %s (expected X), what now?",
+		      oldlabel, olddatestamp);
+	    }
+
 	    /* write tape list */
 
     	    /* XXX add cur_tape number to tape list structure */
